# cpp-torch

./: CMakeLists.txt  LICENSE  README.md  cpptorch.cmake.in  developer_guide.md  install.md  install_linux.md  install_mac.md  install_windows.md  progress.md
example/basic/: CMakeLists.txt  main.cpp  net.t7  x.t7  y.t7
example/fns/: CMakeLists.txt  fns.cpp
example/openface/: CMakeLists.txt  main.cpp
include/: General.h  allocator.h  builder.h  cpptorch.h  cpptorch_cuda.h  th_wrapper.h
include/nn/: Add.h  BatchNormalization.h  Concat.h  Container.h  Decorator.h  DepthConcat.h  Inception.h  Layer.h  Linear.h  LogSoftMax.h  MulConstant.h  Normalize.h  ReLU.h  Reshape.h  Sequential.h  SoftMax.h  SpatialAveragePooling.h  SpatialBatchNormalization.h  SpatialConvolution.h  SpatialConvolutionMM.h  SpatialCrossMapLRN.h  SpatialLPPooling.h  SpatialMaxPooling.h  SpatialReflectionPadding.h  Sqrt.h  Square.h  Tanh.h  Threshold.h  View.h
include/torch/: Storage.h  Tensor.h
src/: allocator.cpp  allocator.h  builder.h  builder.h.inl  develop_new_layer.py  export.cpp  extractor.cpp  extractor.h  factory.h  loader.cpp  loader.h  nn.h  reader.h  reader.h.inl  th_wrapper.cpp  th_wrapper.h  util.h
src/nn/: Add.h.inl  BatchNormalization.h  BatchNormalization.h.inl  Concat.h  Concat.h.inl  Container.h  Container.h.inl  Decorator.h  Decorator.h.inl  DepthConcat.h  DepthConcat.h.inl  General.h  Inception.h  Inception.h.inl  Layer.h  Layer.h.inl  Linear.h  Linear.h.inl  LogSoftMax.h.inl  MulConstant.h  MulConstant.h.inl  Normalize.h  Normalize.h.inl  ReLU.h  Reshape.h  Reshape.h.inl  Sequential.h  Sequential.h.inl  SoftMax.h.inl  SpatialAveragePooling.h  SpatialAveragePooling.h.inl  SpatialBatchNormalization.h  SpatialBatchNormalization.h.inl  SpatialConvolution.h  SpatialConvolution.h.inl  SpatialConvolutionMM.h  SpatialConvolutionMM.h.inl  SpatialCrossMapLRN.h  SpatialCrossMapLRN.h.inl  SpatialLPPooling.h  (+20 more)
src/serializer/: Add.h  BatchNormalization.h  Concat.h  Container.h  Decorator.h  DepthConcat.h  Inception.h  Linear.h  LogSoftMax.h  MulConstant.h  Normalize.h  ReLU.h  Reshape.h  Sequential.h  SoftMax.h  SpatialAveragePooling.h  SpatialBatchNormalization.h  SpatialConvolution.h  SpatialConvolutionMM.h  SpatialCrossMapLRN.h  SpatialLPPooling.h  SpatialMaxPooling.h  SpatialReflectionPadding.h  Sqrt.h  Square.h  Tanh.h  Threshold.h  View.h
src/torch/: Storage.h.inl  Tensor.h.inl  TensorPrint.h.inl  allocator.cpp  allocator.h
src_cuda/: cuda.cpp  export.cpp  th_wrapper.cpp  th_wrapper.h
test/: CMakeLists.txt  common.h  cuda.cpp  run_test.sh  simple_test.cpp  simple_test_cuda.cpp  tester.cpp  tester_cuda.cpp
test/cases/Containers/: Concat_1.lua  Concat_2.lua  DepthConcat_1.lua  Sequental_1.lua
test/cases/ConvolutionLayers/Spatial/: SpatialAveragePooling_1.lua  SpatialBatchNormalization_1.lua  SpatialBatchNormalization_2.lua  SpatialConvolutionMM_1.lua  SpatialConvolution_1.lua  SpatialCrossMapLRN_1.lua  SpatialLPPooling_1.lua  SpatialMaxPooling_1.lua  SpatialReflectionPadding_1.lua
test/cases/SimpleLayers/BasicTensor/: Reshape_1.lua  View_1.lua
test/cases/SimpleLayers/MathTensor/: Normalize_1.lua  Normalize_2.lua  Sqrt_1.lua
test/cases/SimpleLayers/Miscellaneous/: BatchNormalization_1.lua
test/cases/SimpleLayers/Parameterized/: Linear_1.lua
test/cases/SpatialConvolution/: 1.lua
test/cases/TransferFunctions/: Add_1.lua  LogSoftMax_1.lua  MulConstant_1.lua  ReLU_1.lua  SoftMax_1.lua  Tanh_1.lua
test/cases/dpnn/: Decorator_1.lua  Inception_1.lua
